--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-argon2-cffi==21.1.0
+
 asgiref==3.4.1
 astroid==2.7.3
 attrs==21.2.0
@@ -18,6 +18,7 @@ defusedxml==0.7.1
 distlib==0.3.2
 Django==3.2.9
 django-allauth==0.45.0
+django-countries==7.2.1
 django-crispy-forms==1.13.0
 docutils==0.17.1
 entrypoints==0.3
@@ -97,6 +98,7 @@ smmap==4.0.0
 snowballstemmer==2.1.0
 sqlparse==0.4.2
 stevedore==3.4.0
+stripe==2.63.0
 terminado==0.12.1
 testpath==0.5.0
 toml==0.10.2
