--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-
+aiohttp==3.8.1
+aiosignal==1.2.0
+argon2-cffi==21.1.0
 asgiref==3.4.1
 astroid==2.7.3
+async-timeout==4.0.1
 attrs==21.2.0
+auditlog3==1.0.1
 autopep8==1.5.7
 backcall==0.2.0
 backports.entry-points-selectable==1.1.0
@@ -16,16 +20,22 @@ debugpy==1.4.3
 decorator==5.1.0
 defusedxml==0.7.1
 distlib==0.3.2
+dj-database-url==0.5.0
 Django==3.2.9
 django-allauth==0.45.0
+django-cors-headers==3.10.1
 django-countries==7.2.1
+django-countries-with-calling-codes==0.1.1
 django-crispy-forms==1.13.0
+django-utils-six==2.0
 docutils==0.17.1
 entrypoints==0.3
 filelock==3.0.12
 flake8==3.9.2
 flake8-django==1.1.2
 flake8-flask==0.9.3
+frozenlist==1.2.0
+geoip2==4.5.0
 gitdb==4.0.7
 GitPython==3.1.18
 idna==3.2
@@ -45,8 +55,10 @@ keyring==23.2.1
 lazy-object-proxy==1.6.0
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
+maxminddb==2.2.0
 mccabe==0.6.1
 mistune==0.8.4
+multidict==5.2.0
 mypy==0.910
 mypy-extensions==0.4.3
 nbclient==0.5.4
@@ -68,6 +80,7 @@ pkginfo==1.7.1
 platformdirs==2.3.0
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
+psycopg2-binary==2.9.2
 ptyprocess==0.7.0
 pycodestyle==2.7.0
 pycparser==2.20
@@ -113,4 +126,5 @@ virtualenv-clone==0.5.7
 wcwidth==0.2.5
 webencodings==0.5.1
 wrapt==1.12.1
+yarl==1.7.2
 zipp==3.5.0
