--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ frozenlist==1.2.0
 geoip2==4.5.0
 gitdb==4.0.7
 GitPython==3.1.18
+gunicorn==20.1.0
 idna==3.2
 importlib-metadata==4.8.1
 ipykernel==6.4.1
