--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
 argon2-cffi==21.1.0
 asgiref==3.4.1
 astroid==2.7.3
+async-timeout==4.0.1
 attrs==21.2.0
 autopep8==1.5.7
 backcall==0.2.0
@@ -11,6 +14,8 @@ certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
 colorama==0.4.4
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==3.4.8
 debugpy==1.4.3
 decorator==5.1.0
@@ -19,20 +24,30 @@ distlib==0.3.2
 dj-database-url==0.5.0
 Django==3.2.9
 django-allauth==0.45.0
+django-cors-headers==3.10.1
+django-countries==7.2.1
+django-crispy-forms==1.13.0
+django-utils-six==2.0
+djangorestframework==3.12.4
 docutils==0.17.1
+drf-yasg==1.20.0
 entrypoints==0.3
 filelock==3.0.12
 flake8==3.9.2
 flake8-django==1.1.2
 flake8-flask==0.9.3
+frozenlist==1.2.0
+geoip2==4.5.0
 gitdb==4.0.7
 GitPython==3.1.18
 idna==3.2
 importlib-metadata==4.8.1
+inflection==0.5.1
 ipykernel==6.4.1
 ipython==7.27.0
 ipython-genutils==0.2.0
 isort==5.9.3
+itypes==1.2.0
 jedi==0.18.0
 jeepney==0.7.1
 Jinja2==3.0.1
@@ -44,8 +59,10 @@ keyring==23.2.1
 lazy-object-proxy==1.6.0
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
+maxminddb==2.2.0
 mccabe==0.6.1
 mistune==0.8.4
+multidict==5.2.0
 mypy==0.910
 mypy-extensions==0.4.3
 nbclient==0.5.4
@@ -91,6 +108,8 @@ requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rfc3986==1.5.0
 rope==0.19.0
+ruamel.yaml==0.17.17
+ruamel.yaml.clib==0.2.6
 SecretStorage==3.3.1
 Send2Trash==1.8.0
 six==1.16.0
@@ -98,6 +117,7 @@ smmap==4.0.0
 snowballstemmer==2.1.0
 sqlparse==0.4.2
 stevedore==3.4.0
+stripe==2.63.0
 terminado==0.12.1
 testpath==0.5.0
 toml==0.10.2
@@ -106,10 +126,12 @@ tqdm==4.62.2
 traitlets==5.1.0
 twine==3.4.2
 typing-extensions==3.10.0.2
+uritemplate==4.1.1
 urllib3==1.26.6
 virtualenv==20.7.2
 virtualenv-clone==0.5.7
 wcwidth==0.2.5
 webencodings==0.5.1
 wrapt==1.12.1
+yarl==1.7.2
 zipp==3.5.0
