--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,6 @@ certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
 colorama==0.4.4
-coreapi==2.3.3
-coreschema==0.0.4
 cryptography==3.4.8
 debugpy==1.4.3
 decorator==5.1.0
@@ -24,13 +22,10 @@ distlib==0.3.2
 dj-database-url==0.5.0
 Django==3.2.9
 django-allauth==0.45.0
-django-cors-headers==3.10.1
 django-countries==7.2.1
+django-countries-with-calling-codes==0.1.1
 django-crispy-forms==1.13.0
-django-utils-six==2.0
-djangorestframework==3.12.4
 docutils==0.17.1
-drf-yasg==1.20.0
 entrypoints==0.3
 filelock==3.0.12
 flake8==3.9.2
@@ -40,15 +35,12 @@ frozenlist==1.2.0
 geoip2==4.5.0
 gitdb==4.0.7
 GitPython==3.1.18
-gunicorn==20.1.0
 idna==3.2
 importlib-metadata==4.8.1
-inflection==0.5.1
 ipykernel==6.4.1
 ipython==7.27.0
 ipython-genutils==0.2.0
 isort==5.9.3
-itypes==1.2.0
 jedi==0.18.0
 jeepney==0.7.1
 Jinja2==3.0.1
@@ -109,8 +101,6 @@ requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rfc3986==1.5.0
 rope==0.19.0
-ruamel.yaml==0.17.17
-ruamel.yaml.clib==0.2.6
 SecretStorage==3.3.1
 Send2Trash==1.8.0
 six==1.16.0
@@ -127,7 +117,6 @@ tqdm==4.62.2
 traitlets==5.1.0
 twine==3.4.2
 typing-extensions==3.10.0.2
-uritemplate==4.1.1
 urllib3==1.26.6
 virtualenv==20.7.2
 virtualenv-clone==0.5.7
