--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,19 @@ aiohttp==3.8.1
 aiosignal==1.2.0
 asgiref==3.4.1
 async-timeout==4.0.1
+boto3==1.20.23
+botocore==1.23.23
 dj-database-url==0.5.0
 Django==3.2.9
 django-allauth==0.45.0
 django-countries==7.2.1
 django-countries-with-calling-codes==0.1.1
 django-crispy-forms==1.13.0
+django-storages==1.12.3
 frozenlist==1.2.0
 geoip2==4.5.0
 gunicorn==20.1.0
+jmespath==0.10.0
 maxminddb==2.2.0
 multidict==5.2.0
 oauthlib==3.1.1
@@ -20,6 +24,7 @@ PyJWT==2.3.0
 python3-openid==3.2.0
 pytz==2021.3
 requests-oauthlib==1.3.0
+s3transfer==0.5.0
 sqlparse==0.4.2
 stripe==2.63.0
 yarl==1.7.2
